# QuikTieper

./: DEVELOPERNOTE.md  README.md  __init__.py  bindings.py  cli.py  config.py  gui.py  launcher.py  listener.py  pyproject.toml
CamComs/: README.md  __init__.py  audit.py  codec.py  encryption.py  instructions.py  paths.py  receiver.py  replay.py  service.py  transport.py  trust.py
CamComs/esp32payload/: README.md  esp32payload.ino
QuikTieper/: __init__.py  bindings.py  cli.py  gui.py  listener.py  remote.py
Vsee/: __init__.py  model.py
fiona/: __init__.py  cli.py  listener.py
quiktieper/: bindings.py  cli.py  config.py  gui.py  launcher.py  listener.py
scripts/: fiona-edit  fiona-run
tests/: test_camcoms_encryption.py  test_camcoms_instructions.py  test_camcoms_receiver.py  test_camcoms_service.py  test_camcoms_transport.py  test_camcoms_trust.py  test_gui_handlers.py  test_package_structure.py  test_quiktieper_remote.py  test_vsee_model.py
