[project]
name = "fiona"
version = "0.1.0"
description = "Mouse-free app launcher built around simultaneous key chords."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pynput>=1.7.7",
]

[project.scripts]
fiona = "fiona.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
